--- a/index.html
+++ b/index.html
@@ -54,22 +54,23 @@
             </p>
         </div>
     </div>
+    <!-- Changed class to "benefit-margin to remove all "dry" code in CSS-->
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-margin">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="hard work generating money icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-margin">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="a person builing awareness icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-margin">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="managing cost icon" />
             <p>
