Added section for benefits

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         </div>
     </div>
     <!-- Changed class to "benefit-margin to remove all "dry" code in CSS-->
+    <!--Created a section for benefits"-->
+    <section>
     <div class="benefits">
         <div class="benefit-margin">
             <h3>Lead Generation</h3>
@@ -78,6 +80,7 @@
             </p>
         </div>
     </div>
+</section>
     <div class="footer">
         <!--Changed H2 to H4-->
         <h4>Made with ❤️️ by Horiseon</h4>
