--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
         </div>
     </div>
 </section>
-    <div class="footer">
+    <footer>
         <!--Changed H2 to H4-->
+        <!--Changed the div to a footer tag-->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
